[tool.poetry]
name = "qorp"
version = "0.0.1"
description = "QORP implementation written in python."
authors = ["jorektheglitch <jorektheglitch@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
cryptography = "^37"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
